--- a/pipelines/nukeeper.yml
+++ b/pipelines/nukeeper.yml
@@ -18,7 +18,7 @@ pool:
 stages:
 - stage: Library
   displayName: Library
-  -jobs:
+  jobs:
    steps:
    - checkout: Library
    - task: nukeeper.nukeeper.nukeeper.NuKeeper@0
