--- a/pipelines/nukeeper.yml
+++ b/pipelines/nukeeper.yml
@@ -18,11 +18,13 @@ pool:
 stages:
 - stage: Library
   displayName: Library
-  steps:
-  - checkout: Library
-  - task: nukeeper.nukeeper.nukeeper.NuKeeper@0
-    displayName: NuKeeper
-    inputs:
-      gitHubConnection: 'procosys - github'
-      arguments: '--age 0 --change Major --maxpackageupdates 100 --consolidate --fork PreferSingleRepository'
-      targetFolder: src
+  jobs:
+  - job: Library
+    steps:
+    - checkout: Library
+    - task: nukeeper.nukeeper.nukeeper.NuKeeper@0
+      displayName: NuKeeper
+      inputs:
+        gitHubConnection: 'procosys - github'
+        arguments: '--age 0 --change Major --maxpackageupdates 100 --consolidate --fork PreferSingleRepository'
+        targetFolder: src
