--- a/pipelines/nukeeper.yml
+++ b/pipelines/nukeeper.yml
@@ -23,8 +23,22 @@ pool:
   vmImage: 'ubuntu-latest'
 
 stages:
+- stage: Library
+  displayName: Library
+  dependsOn: []
+  jobs:
+  - job: Library
+    steps:
+    - checkout: Library
+    - task: nukeeper.nukeeper.nukeeper.NuKeeper@0
+      displayName: NuKeeper
+      inputs:
+        gitHubConnection: 'procosys - github'
+        arguments: '--age 0 --change Major --maxpackageupdates 100 --consolidate --fork PreferSingleRepository'
+        targetFolder: src
 - stage: Preservation
   displayName: Preservation
+  dependsOn: []
   jobs:
   - job: Preservation
     steps:
@@ -34,4 +48,3 @@ stages:
       inputs:
         gitHubConnection: 'procosys - github'
         arguments: '--age 0 --change Major --maxpackageupdates 100 --consolidate --fork PreferSingleRepository'
-        targetFolder: (Agent.BuildDirectory)\s\Preservation
