--- a/pipelines/nukeeper.yml
+++ b/pipelines/nukeeper.yml
@@ -22,6 +22,10 @@ resources:
     type: github
     name: equinor/procosys-queue-reciver-service
     endpoint: procosys - github
+  - repository: AuthAccessTriggerFunction # The name used to reference this repository in the checkout step
+    type: github
+    name: equinor/procosys-auth-access-trigger-function
+    endpoint: procosys - github
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -65,6 +69,20 @@ stages:
   - job: QueueReceiverService
     steps:
     - checkout: QueueReceiverService
+    - task: nukeeper.nukeeper.nukeeper.NuKeeper@0
+      displayName: NuKeeper
+      inputs:
+        gitHubConnection: 'procosys - github'
+        arguments: '--age 0 --change Major --maxpackageupdates 100 --consolidate --fork PreferSingleRepository'
+
+### Auth Access Trigger Function ###
+- stage: AuthAccessTriggerFunction
+  displayName: AuthAccessTriggerFunction
+  dependsOn: []
+  jobs:
+  - job: AuthAccessTriggerFunction
+    steps:
+    - checkout: AuthAccessTriggerFunction
     - task: nukeeper.nukeeper.nukeeper.NuKeeper@0
       displayName: NuKeeper
       inputs:
